chore: update the `get_embedding` script

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -58,6 +58,7 @@ dependencies = [
     "regex==2024.11.6",
     "requests==2.32.3",
     "requests-toolbelt==1.0.0",
+    "sacremoses>=0.1.1",
     "safetensors==0.5.3",
     "scikit-learn==1.6.1",
     "scipy==1.15.2",
