--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "attrs==25.3.0",
     "certifi==2025.1.31",
     "charset-normalizer==3.4.1",
+    "datasets>=2.14.4",
     "distro==1.9.0",
     "filelock==3.18.0",
     "frozenlist==1.5.0",
