--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "charset-normalizer==3.4.1",
     "datasets>=2.14.4",
     "distro==1.9.0",
+    "einops>=0.8.1",
     "filelock==3.18.0",
     "frozenlist==1.5.0",
     "fsspec==2025.3.0",
@@ -71,6 +72,7 @@ dependencies = [
     "sympy==1.13.1",
     "tenacity==9.0.0",
     "threadpoolctl==3.6.0",
+    "tiktoken>=0.9.0",
     "tokenizers==0.21.1",
     "torch==2.6.0",
     "torchmetrics==1.7.0",
