--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "charset-normalizer==3.4.1",
     "datasets>=2.14.4",
     "distro==1.9.0",
+    "dotenv>=0.9.9",
     "einops>=0.8.1",
     "filelock==3.18.0",
     "frozenlist==1.5.0",
