--- a/pyproject.toml
+++ b/pyproject.toml
@@ -45,6 +45,7 @@ dependencies = [
     "networkx==3.4.2",
     "numpy==2.2.4",
     "openai==1.68.2",
+    "openpyxl>=3.1.5",
     "orjson==3.10.16",
     "packaging==24.2",
     "pandas==2.2.3",
