chore: Adds flagembedding and peft dependencies
Adds flagembedding and peft as dependencies, updating the uv.lock file accordingly.
This ensures the project has the necessary libraries for specific functionalities,
likely related to embedding generation and parameter-efficient fine-tuning.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "dotenv>=0.9.9",
     "einops>=0.8.1",
     "filelock==3.18.0",
+    "flagembedding>=1.2.11",
     "frozenlist==1.5.0",
     "fsspec==2025.3.0",
     "h11==0.14.0",
@@ -49,6 +50,7 @@ dependencies = [
     "orjson==3.10.16",
     "packaging==24.2",
     "pandas==2.2.3",
+    "peft>=0.15.1",
     "pillow==11.1.0",
     "propcache==0.3.0",
     "protobuf==6.30.1",
