--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,8 @@ logits/
 performance/
 my_datasets/mimic-iv/*
 !my_datasets/mimic-iv/preprocess_mimic.py
+my_datasets/mimic-iii/*
+!my_datasets/mimic-iii/preprocess_mimic3_note.py
 *.DS_Store
 prompt_*.md
 test_*.py
