--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "jinja2==3.1.6",
     "jiter==0.9.0",
     "joblib==1.4.2",
+    "json-repair>=0.50.0",
     "jsonlines==4.0.0",
     "jsonpatch==1.33",
     "jsonpointer==3.0.0",
