--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "httpx==0.28.1",
     "huggingface-hub==0.29.3",
     "idna==3.10",
+    "ipdb>=0.13.13",
     "jinja2==3.1.6",
     "jiter==0.9.0",
     "joblib==1.4.2",
