--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
     "distro==1.9.0",
     "dotenv>=0.9.9",
     "einops>=0.8.1",
+    "fairlearn>=0.12.0",
     "filelock==3.18.0",
     "flagembedding>=1.2.11",
     "frozenlist==1.5.0",
