--- a/pyproject.toml
+++ b/pyproject.toml
@@ -48,6 +48,7 @@ dependencies = [
     "mpmath==1.3.0",
     "multidict==6.2.0",
     "networkx==3.4.2",
+    "nltk>=3.9.2",
     "numpy==2.2.4",
     "openai==1.68.2",
     "openpyxl>=3.1.5",
@@ -78,6 +79,7 @@ dependencies = [
     "six==1.17.0",
     "sniffio==1.3.1",
     "sqlalchemy==2.0.39",
+    "statsmodels>=0.14.6",
     "sympy==1.13.1",
     "tenacity==9.0.0",
     "threadpoolctl==3.6.0",
